# OpenVR-WKSpaceCalibrator

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_WORKFLOW.md  build.ps1  deploy-test.ps1  quick.ps1  version.txt
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  stuck_offset.yml
.github/scripts/: Update-Changelog.ps1
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
docs/wiki/: Architecture.md  Building.md  Continuous-Calibration.md  Home.md  README.md
install/: installer.nsi
scripts/: Analyze-InputHealthCapture.ps1
src/: CMakeLists.txt
src/common/: MotionGate.h  Protocol.h
src/driver/: CMakeLists.txt  CalibrationDriverModule.cpp  IPCServer.cpp  IPCServer.h  InterfaceHookInjector.cpp  InterfaceHookInjector.h  IsometryTransform.h  Logging.cpp  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.h  SkeletalHookInjector.cpp  SkeletalHookInjector.h
src/overlay/: BlendFilter.h  BuildStamp.h  CMakeLists.txt  Calibration.cpp  Calibration.h  CalibrationCalc.cpp  CalibrationCalc.h  CalibrationDebug.cpp  CalibrationMetrics.cpp  CalibrationMetrics.h  Configuration.cpp  Configuration.h  GeometryShiftDetector.h  IPCClient.cpp  IPCClient.h  InputHealthCapture.cpp  InputHealthCapture.h  InputHealthIpcClient.cpp  InputHealthIpcClient.h  InputHealthPanel.cpp  InputHealthPanel.h  InputHealthSnapshotReader.cpp  InputHealthSnapshotReader.h  LatencyEstimator.h  MotionRecording.cpp  MotionRecording.h  ReanchorChiSquareDetector.h  RecoveryDeltaBuffer.h  RestLockedYaw.h  RobustScale.h  SpaceCalibrator.cpp  SpaceCalibratorPlugin.cpp  SpaceCalibratorPlugin.h  SpaceCalibratorUmbrellaRuntime.cpp  StallDecisions.h  StateTransitions.h  TiltDiagnostic.h  TranslationSolveDirect.cpp  TranslationSolveDirect.h  UpdateChecker.cpp  (+17 more)
tests/: CMakeLists.txt  stubs.cpp  test_blend_filter.cpp  test_calibration_calc.cpp  test_configuration.cpp  test_geometry_shift_detector.cpp  test_latency_estimator.cpp  test_motion_gate.cpp  test_protocol.cpp  test_reanchor_chi_square.cpp  test_recovery_delta_buffer.cpp  test_rest_locked_yaw.cpp  test_robust_scale.cpp  test_stall_decisions.cpp  test_state_transitions.cpp  test_tilt_diagnostic.cpp  test_translation_solve_direct.cpp  test_watchdog_decisions.cpp  test_wedge_detector.cpp
tools/replay/: CMakeLists.txt  CalibrationMetrics_stub.cpp  README.md  main.cpp
wiki/: Architecture.md  Auto-Recovery.md  Building.md  Changelog.md  Continuous-Calibration.md  Driver-Protocol.md  Finger-Smoothing.md  Home.md  In-App-Updater.md  Multi-Ecosystem.md  Plan-One-Shot-Drift.md  Prediction-Suppression.md  README.md  Settings-Reference.md  Setup-Wizard.md  Troubleshooting.md  _Sidebar.md
