cmake_minimum_required (VERSION 3.15)

get_filename_component(SPACECAL_REPO_ROOT "${CMAKE_CURRENT_LIST_DIR}/../.." ABSOLUTE)
set(SPACECAL_PAIRDRIVER_ROOT "${OPENVR_PAIRDRIVER_ROOT}" CACHE PATH "OpenVR-WKPairDriver checkout")
if(NOT SPACECAL_PAIRDRIVER_ROOT)
    set(_sibling_pairdriver "${SPACECAL_REPO_ROOT}/../OpenVR-WKPairDriver")
    if(EXISTS "${_sibling_pairdriver}/src/overlay/FeaturePlugin.h")
        get_filename_component(SPACECAL_PAIRDRIVER_ROOT "${_sibling_pairdriver}" ABSOLUTE)
    else()
        get_filename_component(SPACECAL_PAIRDRIVER_ROOT "${SPACECAL_REPO_ROOT}/lib/OpenVR-WKPairDriver" ABSOLUTE)
    endif()
endif()

if(OPENVR_PAIR_BUILD_UMBRELLA)
    set(SPACECAL_BUILDSTAMP_HEADER "${CMAKE_CURRENT_LIST_DIR}/BuildStamp.h")
    if(NOT EXISTS "${SPACECAL_BUILDSTAMP_HEADER}")
        file(WRITE "${SPACECAL_BUILDSTAMP_HEADER}"
"// Fallback stamp for umbrella cmake builds.\n"
"// Set by OpenVR-WKPairDriver's build.ps1 when running a real release.\n"
"#pragma once\n"
"#define SPACECAL_BUILD_STAMP \"0.0.0.0-DEV\"\n"
"#define SPACECAL_BUILD_CHANNEL \"dev\"\n")
    endif()

    file(GLOB SPACECAL_UMBRELLA_SOURCES CONFIGURE_DEPENDS
        "${CMAKE_CURRENT_LIST_DIR}/*.cpp"
        "${CMAKE_CURRENT_LIST_DIR}/*.h")
    list(FILTER SPACECAL_UMBRELLA_SOURCES EXCLUDE REGEX ".*/SpaceCalibrator\\.cpp$")
    list(FILTER SPACECAL_UMBRELLA_SOURCES EXCLUDE REGEX ".*/SpaceCalibratorPlugin\\.(cpp|h)$")
    list(FILTER SPACECAL_UMBRELLA_SOURCES EXCLUDE REGEX ".*/SpaceCalibratorUmbrellaRuntime\\.(cpp|h)$")
    list(FILTER SPACECAL_UMBRELLA_SOURCES EXCLUDE REGEX ".*/InputHealth.*\\.(cpp|h)$")

    add_library(openvr_pair_feature_calibration_overlay STATIC
        ${SPACECAL_UMBRELLA_SOURCES}
        SpaceCalibratorPlugin.cpp
        SpaceCalibratorPlugin.h
        SpaceCalibratorUmbrellaRuntime.cpp
        SpaceCalibratorUmbrellaRuntime.h)

    target_include_directories(openvr_pair_feature_calibration_overlay PUBLIC
        ${CMAKE_CURRENT_LIST_DIR}
        ${SPACECAL_REPO_ROOT}
        ${SPACECAL_REPO_ROOT}/src/common
        ${SPACECAL_PAIRDRIVER_ROOT}/src/common
        ${SPACECAL_PAIRDRIVER_ROOT}/src/overlay
        ${SPACECAL_REPO_ROOT}/lib
        ${SPACECAL_REPO_ROOT}/lib/imgui
        ${SPACECAL_REPO_ROOT}/lib/imgui/backends
        ${SPACECAL_REPO_ROOT}/lib/implot
        ${SPACECAL_REPO_ROOT}/lib/openvr/headers
        ${SPACECAL_REPO_ROOT}/lib/Eigen)

    target_link_libraries(openvr_pair_feature_calibration_overlay PUBLIC
        glfw
        pair_imgui
        pair_implot
        opengl32.lib
        dwmapi.lib
        winhttp.lib
        bcrypt.lib
        ${SPACECAL_REPO_ROOT}/lib/openvr/lib/win64/openvr_api.lib)

    target_compile_definitions(openvr_pair_feature_calibration_overlay PRIVATE
        NOMINMAX
        UNICODE
        _UNICODE
        IMGUI_DEFINE_MATH_OPERATORS)

    if(MSVC)
        target_compile_options(openvr_pair_feature_calibration_overlay PRIVATE /bigobj)
    else()
        target_compile_options(openvr_pair_feature_calibration_overlay PRIVATE -Wa,-mbig-obj)
    endif()

    return()
endif()

# Standalone overlay build (build.ps1, CI, IDE configure). The umbrella branch
# above sets SPACECAL_PAIRDRIVER_ROOT to the sibling repo or this repo's
# lib/ submodule. The standalone branch was previously hard-coded to the
# submodule path; default the variable here so shared-header GLOBs and
# target_include_directories below still resolve when nothing set it.
if(NOT DEFINED SPACECAL_PAIRDRIVER_ROOT)
    set(SPACECAL_PAIRDRIVER_ROOT "${CMAKE_SOURCE_DIR}/lib/OpenVR-WKPairDriver")
endif()

project(SpaceCalibratorOverlay)
message("SpaceCalibrator - Overlay")

function(GroupSourcesByFolder target)
    set(SOURCE_GROUP_DELIMITER "/")
    set(last_dir "")
    set(files "")

    get_target_property(sources ${target} SOURCES)

    foreach(file ${sources})
        file(RELATIVE_PATH relative_file "${PROJECT_SOURCE_DIR}" ${file})
        get_filename_component(dir "${relative_file}" PATH)
        if(NOT "${dir}" STREQUAL "${last_dir}")
            if(files)
                source_group("${last_dir}" FILES ${files})
            endif()
            set(files "")
        endif()
        set(files ${files} ${file})
        set(last_dir "${dir}")
    endforeach()

    if(files)
        source_group("${last_dir}" FILES ${files})
    endif()
endfunction()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    enable_language("RC")
    set (WIN32_RESOURCES ${CMAKE_SOURCE_DIR}/src/overlay/SpaceCalibrator.rc)
endif()

# BuildStamp.h is normally generated by build.ps1 (it embeds the per-build
# YYYY.M.D.N-XXXX stamp the in-app updater compares against the latest GitHub
# release). When configure is invoked directly (CI, IDE-driven configure,
# anyone who skips build.ps1), the file won't exist yet -- write a placeholder
# so the build doesn't fail. build.ps1 will overwrite it on the next run.
set(SPACECAL_BUILDSTAMP_HEADER "${CMAKE_SOURCE_DIR}/src/overlay/BuildStamp.h")
if(NOT EXISTS "${SPACECAL_BUILDSTAMP_HEADER}")
    file(WRITE "${SPACECAL_BUILDSTAMP_HEADER}"
"// Fallback stamp for direct cmake builds that bypass build.ps1.\n"
"// build.ps1 overwrites this file with the real per-build version.\n"
"#pragma once\n"
"#define SPACECAL_BUILD_STAMP \"0.0.0.0-DEV\"\n"
"#define SPACECAL_BUILD_CHANNEL \"dev\"\n")
endif()

# Add source files
file(GLOB_RECURSE SOURCES_API ${CMAKE_SOURCE_DIR}/src/overlay "*.c" "*.h" "*.hpp" "*.cpp")
list(FILTER SOURCES_API EXCLUDE REGEX ".*/SpaceCalibratorPlugin\\.(cpp|h)$")
list(FILTER SOURCES_API EXCLUDE REGEX ".*/SpaceCalibratorUmbrellaRuntime\\.(cpp|h)$")
file(GLOB_RECURSE SOURCES_HEADERS ${CMAKE_SOURCE_DIR}/src/common "*.h" "*.hpp")
# Protocol.h, MotionGate.h, and neutral UI helpers live in the
# OpenVR-WKPairDriver submodule. Both
# the overlay (this target) and the driver (built by the submodule) consume
# them so shared contracts and primitives stay in lock-step.
file(GLOB_RECURSE SOURCES_SHARED_HEADERS ${SPACECAL_PAIRDRIVER_ROOT}/src/common "*.h" "*.hpp")
file(GLOB SOURCES_SHARED_OVERLAY_HEADERS ${SPACECAL_PAIRDRIVER_ROOT}/src/overlay/UiHelpers.h)

foreach(SOURCE IN ITEMS ${SOURCES_API})
    get_filename_component(SOURCE_PATH "${SOURCE}" PATH)
    string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}" "" GROUP_PATH "${SOURCE_PATH}")
    string(REPLACE "/" "\\" GROUP_PATH "${GROUP_PATH}")
    source_group("${GROUP_PATH}" FILES "${SOURCE}")
endforeach()

set(IMGUI_FILES
    ${CMAKE_SOURCE_DIR}/lib/imgui/backends/imgui_impl_opengl3.cpp
    ${CMAKE_SOURCE_DIR}/lib/imgui/backends/imgui_impl_glfw.cpp)

add_executable(SpaceCalibratorOverlay ${SOURCES_API} ${SOURCES_HEADERS} ${SOURCES_SHARED_HEADERS} ${SOURCES_SHARED_OVERLAY_HEADERS} ${IMGUI_FILES} ${WIN32_RESOURCES})
GroupSourcesByFolder(SpaceCalibratorOverlay)
# Disable console window
set_target_properties(SpaceCalibratorOverlay PROPERTIES
    LINK_FLAGS_DEBUG            "/SUBSYSTEM:CONSOLE /ENTRY:wWinMainCRTStartup /NODEFAULTLIB:library"
    LINK_FLAGS_MINSIZEREL       "/SUBSYSTEM:WINDOWS /ENTRY:wWinMainCRTStartup /NODEFAULTLIB:library"
    LINK_FLAGS_RELEASE          "/SUBSYSTEM:WINDOWS /ENTRY:wWinMainCRTStartup /NODEFAULTLIB:library"
    LINK_FLAGS_RELWITHDEBINFO   "/SUBSYSTEM:WINDOWS /ENTRY:wWinMainCRTStartup /NODEFAULTLIB:library")

target_include_directories(SpaceCalibratorOverlay
    PUBLIC ${CMAKE_SOURCE_DIR}
    PUBLIC ${CMAKE_SOURCE_DIR}/src/common
    PUBLIC ${CMAKE_SOURCE_DIR}/src/overlay
    # Pulls in Protocol.h, MotionGate.h, and neutral UI helpers from the
    # OpenVR-WKPairDriver submodule
    # so the overlay's #include "Protocol.h" resolves to the same wire-layout
    # header the shared driver builds against, and UI banners share one primitive.
    PUBLIC ${SPACECAL_PAIRDRIVER_ROOT}/src/common
    PUBLIC ${SPACECAL_PAIRDRIVER_ROOT}/src/overlay
    PUBLIC ${CMAKE_SOURCE_DIR}/lib
    PUBLIC ${CMAKE_SOURCE_DIR}/lib/openvr/headers
    PUBLIC ${CMAKE_SOURCE_DIR}/lib/imgui/backends
    PUBLIC ${CMAKE_SOURCE_DIR}/lib/Eigen
)

target_link_libraries(SpaceCalibratorOverlay
    PRIVATE opengl32.lib
    PRIVATE dwmapi.lib
    # Updater path: WinHttp for GitHub API + installer download, BCrypt for
    # the SHA-256 verification step before launch. Already pulled in by the
    # `#pragma comment(lib, ...)` directives in UpdateChecker.cpp / Updater.cpp,
    # but listed explicitly so the dependency is visible to anyone reading
    # the build script and so non-MSVC toolchains see them too.
    PRIVATE winhttp.lib
    PRIVATE bcrypt.lib
    PRIVATE glfw
    PRIVATE gl3w
    PRIVATE imgui
    PRIVATE implot
    PRIVATE ${CMAKE_SOURCE_DIR}/lib/openvr/lib/win64/openvr_api.lib)

target_compile_definitions(SpaceCalibratorOverlay
    PRIVATE NOMINMAX
    PRIVATE UNICODE
    PRIVATE IMGUI_DEFINE_MATH_OPERATORS
)

# Object files are too big with spacecal sooooo
if (MSVC)
    target_compile_options(SpaceCalibratorOverlay PRIVATE /bigobj)
else ()
    target_compile_options(SpaceCalibratorOverlay PRIVATE -Wa,-mbig-obj)
endif ()

# Copy vrmanifest
add_custom_command(
    TARGET SpaceCalibratorOverlay POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy
    ${CMAKE_SOURCE_DIR}/src/overlay/manifest.vrmanifest
    ${CMAKE_BINARY_DIR}/artifacts/$<CONFIG>/manifest.vrmanifest
)

# Copy dashboard icon
add_custom_command(
    TARGET SpaceCalibratorOverlay POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy
    ${CMAKE_SOURCE_DIR}/src/overlay/icon.png
    ${CMAKE_BINARY_DIR}/artifacts/$<CONFIG>/icon.png
)

# Copy taskbar icon
add_custom_command(
    TARGET SpaceCalibratorOverlay POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy
    ${CMAKE_SOURCE_DIR}/src/overlay/taskbar_icon.png
    ${CMAKE_BINARY_DIR}/artifacts/$<CONFIG>/taskbar_icon.png
)

# Copy LICENSE
add_custom_command(
    TARGET SpaceCalibratorOverlay POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy
    ${CMAKE_SOURCE_DIR}/LICENSE
    ${CMAKE_BINARY_DIR}/artifacts/$<CONFIG>/LICENSE
)

# Copy NOTICE
add_custom_command(
    TARGET SpaceCalibratorOverlay POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy
    ${CMAKE_SOURCE_DIR}/NOTICE
    ${CMAKE_BINARY_DIR}/artifacts/$<CONFIG>/README
)

# Copy openvr_api.dll
add_custom_command(
    TARGET SpaceCalibratorOverlay POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy
    ${CMAKE_SOURCE_DIR}/lib/openvr/bin/win64/openvr_api.dll
    ${CMAKE_BINARY_DIR}/artifacts/$<CONFIG>/openvr_api.dll
)

# Set as startup project
set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT SpaceCalibratorOverlay)
set_property(TARGET SpaceCalibratorOverlay PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/artifacts/$<CONFIG>")
set_target_properties(SpaceCalibratorOverlay PROPERTIES OUTPUT_NAME "SpaceCalibrator")
